# mesher

./: .coveragerc  .gitignore  .gitmodules  ACKNOWLEDGEMENTS  CMakeLists.txt  Makefile  README.md  setup.py
.github/workflows/: build.yml  flake8.yml  qa.yml
common/: CMakeLists.txt  booleanwidget.cpp  booleanwidget.h  colorbutton.cpp  colorbutton.h  floatwidget.cpp  floatwidget.h  integerwidget.cpp  integerwidget.h  labelledcolorwidget.cpp  labelledcolorwidget.h  labelledwidget.cpp  labelledwidget.h  listitem.cpp  listwidget.h  minmaxwidget.h  pointwidget.cpp  pointwidget.h  radiooptionswidget.cpp  radiooptionswidget.h  sectiontitlewidget.cpp  sectiontitlewidget.h  sizewidget.cpp  toolbar.cpp  toolbar.h
examples/scripts/: tri-to-exodus.py
gmsh/: CMakeLists.txt
gmsh/cmake/: FindOpenCASCADE.cmake
gmsh/contrib/alglib/: CMakeLists.txt
gmsh/contrib/ann/: CMakeLists.txt
gmsh/contrib/bamg/: CMakeLists.txt
gmsh/contrib/blossom/: CMakeLists.txt
gmsh/contrib/discreteintegration/: CMakeLists.txt
gmsh/contrib/domhex/: CMakeLists.txt
gmsh/contrib/gmm/: CMakeLists.txt
gmsh/contrib/hxt/: CMakeLists.txt
gmsh/contrib/kbipack/: CMakeLists.txt
gmsh/contrib/mathex/: CMakeLists.txt
gmsh/contrib/metis/: CMakeLists.txt
gmsh/contrib/netgen/: CMakeLists.txt
gmsh/contrib/quadtri/: CMakeLists.txt
gmsh/contrib/voro++/: CMakeLists.txt
mesher/: AboutDialog.py  AssignMarkerDialog.py  AssignMarkerDlg.py  ClickableLabel.py  MainWindow.py  MesherInteractorInterface.py  MesherInteractorStyle2D.py  MesherInteractorStyle3D.py  MeshingOptionsBaseWidget.py  NotificationWidget.py  OptionsTetGenWidget.py  OptionsTriangleWidget.py  Selection.py  __main__.py  consts.py  exodusII.py  vtk_helpers.py
resources/: mesh-inspector.desktop
src/: CMakeLists.txt  aboutdlg.cpp  aboutdlg.h  document.cpp  document.h  init.cpp  init.h  leftview.cpp  leftview.h  loggerdialog.cpp  loggerdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mesherconfig.h.in  resources.qrc  selectioninfowidget.cpp  selectioninfowidget.h  selectothersdialog.cpp  selectothersdialog.h  settingsdlg.cpp  settingsdlg.h  textboxdlg.cpp  textboxdlg.h  utils.cpp  utils.h  view.cpp  view.h  viewaxes.cpp  viewgeom.cpp  viewmesh.cpp  viewscales.cpp  visibilitysettingsdialog.cpp  visibilitysettingsdialog.h
src/tools/: basetool.cpp  basetool.h  physicalgrouptool.cpp  physicalgrouptool.h  pointtool.cpp  pointtool.h
tests/: conftest.py  test_about.py  test_assign_marker_dlg.py  test_clickable_label.py  test_interactor_style_2d.py  test_interactor_style_3d.py  test_main_window.py  test_notification_widget.py  test_options_tetgen_widget.py  test_options_triangle_widget.py  test_vtk_helpres.py
tests/assets/: cube.poly  quad.poly
widgets/: CMakeLists.txt  booleanwidget.h  cancelbutton.cpp  cancelbutton.h  colorbutton.cpp  colorbutton.h  colorpicker.cpp  floatwidget.cpp  integerwidget.cpp  labelledcolorwidget.cpp  lineedit.cpp  lineedit.h  listitem.h  listitemwidget.cpp  listitemwidget.h  listwidget.cpp  listwidget.h  minmaxwidget.cpp  namewidget.cpp  namewidget.h  okbutton.cpp  okbutton.h  radiooptionswidget.cpp  settingsstorable.cpp  settingsstorable.h  sizewidget.h  toolbar.cpp  tooltitlewidget.cpp  tooltitlewidget.h  toolwindow.cpp  toolwindow.h
